# agentic_thermal_classifier

./: .gitignore  README.md  TODO.md  agents.py  benchmark_results.ipynb  compare_workflows.ipynb  democratic.ipynb  documentation.md  example_data.ipynb  graph.ipynb  graphs.py  helpers.py  host_demo.ipynb  improvements.md  langgraph.ipynb  llm_chain.ipynb  main.py  model_benchmarking.ipynb  no_context.ipynb  no_context.py  no_context_classification.ipynb  papers.py  practice.ipynb  prompts.py  pyproject.toml  requirements.txt  states.py  summarise.ipynb  test.ipynb  tools.ipynb  tools.py  v2_benchmark.ipynb  v3_benchmark.ipynb  v6.ipynb  version_index.md
archive/: classification.txt  summary_result.csv
benchmarks/: benchmark_results.csv
data/example/: classification.txt  example_data.csv  expanded_example_data.csv  thermal_classification.csv  thermal_classification.txt  thermal_demo_full_output.txt
results/: classification_report.txt  democratic_classification_report.txt  democratic_result.csv  result.csv  summary_classification_report.txt
results/gemma4/: classification_report.txt  result.csv
results/granite4.1/: classification_report.txt  result.csv
results/graph/: result.csv
results/host/: host_classification.csv  host_classification.txt  host_literature_classification.txt  host_metadata_classification.txt
results/no_context/: thermal_metadata_classification.csv  thermal_metadata_classification.txt  thermal_name_classification.csv  thermal_name_classification.txt
src/: graphs.py  nodes.py  papers.py  prompts.py  states.py
v1/: host_demo.ipynb
(+270 files in other folders)
